--- a/templates/outmaterial.html
+++ b/templates/outmaterial.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static custom_tags2 %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -188,13 +188,12 @@
 														</tr>
 													</thead>
 													<tbody>
-														{% for material in outmaterials.all %}
+														{% for producttype in producttypes %}
+														{% if producttype.outmaterial.count > 0 %}
 														<tr>
-																<td>{{material.product_type}}</td>
-																<td>{{material.input_quality}}</td>
-																<td>{{material.unit}}</td>
-																<td>{{material.date}}</td>
-																<td>{{material.comment}}</td>
+																<td>{{producttype.type}}</td>
+																<td>{{ producttype.id|unitsum2 }}</td>
+
 
 																<td>
 																	<label class="badge badge-info">On hold</label>
@@ -203,6 +202,9 @@
 																	<button class="btn btn-outline-primary">View</button>
 																</td>
 														</tr>
+
+
+														{% endif %}
 													{% endfor %}
 													</tbody>
 												</table>
