--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
         <div class="content-wrapper">
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title">Data table</h4>
+              <h4 class="card-title">Warehouse</h4>
               <div class="row">
                 <div class="col-12">
                   <div class="table-responsive">
@@ -121,9 +121,9 @@
 														<th>Added </th>
 														<th>Outed</th>
 														<th>Balance</th>
-														<th>Comment</th>
 
-														<th>Status</th>
+
+
 														<th>Actions</th>
 												</tr>
 											</thead>
@@ -137,9 +137,7 @@
 														<td>{{ producttype.id|unitsum5 }}</td>
 														<td>{{ producttype.id|unitsum3 }}</td>
 
-														<td>
-															<label class="badge badge-info">On hold</label>
-														</td>
+
 														<td>
 															<button class="btn btn-outline-primary">View</button>
 														</td>
